--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.1",
+    "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "mongoose": "^7.6.1",
     "node": "^20.7.0"
