--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mongoose": "^7.6.1",
     "multer": "^1.4.5-lts.1",
     "node": "^20.7.0",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.7"
   }
 }
